--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,3 +173,13 @@ hover:text-primary hover:before:!bg-primary before:mr-2  dark:before:bg-gray-500
 .horizontal-menu > li.nav-item > ul.sub-menu > li:hover > ul {
     @apply block;
 }
+
+.form-select,
+    .form-multiselect {
+        @apply w-full rounded-md border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
+    }
+
+
+.form-select>option{
+    @apply text-primary py-1 dark:text-white-dark ;
+}
