--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -159,6 +159,15 @@ hover:text-primary hover:before:!bg-primary before:mr-2  dark:before:bg-gray-500
     @apply block;
 }
 
+/* Horizontal layouts */
+.horizontal .horizontal-menu {
+    @apply hidden  lg:flex;
+}
+.horizontal .main-container .main-content {
+    @apply ml-0 
+}
+
+
 .form-select,
     .form-multiselect {
         @apply w-full rounded-md border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
