--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,9 @@
 /* Animate css */
 @import './animate.css';
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
- 
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -52,137 +51,66 @@
   }
 }
 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+ 
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+  .main-content {
+    transition: margin-left 0.3s;
   }
 
 
-   /* Panel */
-   .panel {
-    @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
+  .content-expanded {
+    margin-left: 260px; /* Push content to right when sidebar is expanded */
+  }
+
+  .content-collapsed {
+    margin-left: 0px; /* Main content takes full width when sidebar is collapsed */
+  }
+}
+
+/* Panel */
+.panel {
+  @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
 }
 /* Navbar */
 .navbar-sticky header,
 .navbar-floating header {
-    @apply sticky top-0 z-20;
+  @apply sticky top-0 z-20;
 }
 
-.horizontal .navbar-floating header > div > div:first-child {
-    @apply rounded-b-none;
+.content-collapsed .sidebar {
+    @apply -left-[260px]
 }
-.horizontal  header .horizontal-menu {
-    @apply rounded-b-md;
+.content-expanded .sidebar {
+    @apply left-0
 }
-
-/* Sidebar */
-.sidebar:hover .nav-item > a {
-    @apply w-auto;
+.main-container .content-collapsed .main-content {
+    @apply -left-[260px]
 }
 
-.sidebar .nav-item > button,
-.sidebar .nav-item > a {
-    @apply mb-1 flex w-full items-center justify-between overflow-hidden whitespace-nowrap rounded-md p-2.5 text-[#506690] hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-dark;
+.main-container .content-expanded .main-content {
+    @apply left-0
 }
-.sidebar .nav-item > button.active,
-.sidebar .nav-item > a.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-dark;
-}
-
-.sidebar .nav-item > button.active > div > span,
-.sidebar .nav-item > a.active > div > span {
-    @apply dark:!text-white-dark;
-}
-
-.sidebar ul.sub-menu li button,
-.sidebar ul.sub-menu li a {
-    @apply flex w-full items-center px-9 py-2.5 before:h-0.5 before:w-2 before:rounded before:bg-gray-300 hover:bg-gray-100
-hover:text-primary hover:before:!bg-primary before:mr-2  dark:before:bg-gray-500 dark:hover:bg-gray-900 dark:hover:text-primary;
-}
-.sidebar ul.sub-menu li button.active,
-.sidebar ul.sub-menu li a.active {
-    @apply text-primary before:bg-primary;
-}
-
-.sidebar .nav-item a div:first-child svg,
-.sidebar .nav-item button div:first-child svg {
-    @apply h-5 w-5 text-black/50 dark:text-white/50;
-}
-
-.main-container .main-content {
-    @apply transition-all duration-300 lg:mr-[260px] ;
-}
-
-
-
-.horizontal .nav-item a div:first-child svg,
-.horizontal .nav-item button div:first-child svg {
-    @apply h-5 w-5 text-black/50 dark:text-white/50;
-}
-
-.horizontal .dark .nav-item a div:first-child svg,
-.dark.horizontal .nav-item a div:first-child svg,
-.horizontal .dark .nav-item button div:first-child svg,
-.dark.horizontal .nav-item button div:first-child svg {
-    @apply text-white/50;
-}
-
-.horizontal-menu .nav-link {
-    @apply flex items-center rounded-lg px-2 py-2.5 hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-dark xl:px-4;
-}
-
-.horizontal-menu .nav-link.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-dark;
-}
-
-.horizontal-menu ul.sub-menu {
-    @apply absolute top-full z-[10] hidden min-w-[180px] rounded bg-white p-0 py-2 text-dark shadow dark:bg-[#1b2e4b] dark:text-white-dark;
-}
-
-.horizontal-menu ul.sub-menu a,
-.horizontal-menu ul.sub-menu button {
-    @apply flex w-full items-center justify-between px-4 py-2 hover:bg-gray-100 hover:text-primary dark:hover:bg-primary/10;
-}
-
-.horizontal-menu ul.sub-menu a.active,
-.horizontal-menu ul.sub-menu button.active {
-    @apply bg-gray-100 text-primary dark:bg-primary/10;
-}
-
-.horizontal-menu > li.nav-item:hover > ul.sub-menu,
-.horizontal-menu > li.nav-item > ul.sub-menu > li:hover > ul {
-    @apply block;
-}
-
-/* Horizontal layouts */
-.horizontal .horizontal-menu {
-    @apply hidden  lg:flex;
-}
-.horizontal .main-container .main-content {
-    @apply ml-0 
-}
-
-
 .form-select,
-    .form-multiselect {
-        @apply w-full rounded-md border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
-    }
-
-
-.form-select>option{
-    @apply text-primary py-1 dark:text-white-dark ;
+.form-multiselect {
+  @apply w-full rounded-md border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
 }
 
- /* tables */
- .table-responsive {
-    @apply overflow-auto;
+.form-select > option {
+  @apply text-primary py-1 dark:text-white-dark;
 }
 
- .panel {
-    @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
+/* tables */
+.table-responsive {
+  @apply overflow-auto;
+}
+
+.panel {
+  @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
 }
