--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,188 +1,320 @@
 /* Animate css */
 @import './animate.css';
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --foreground: 222.2 84% 4.9%;
+
+    --muted: 220 14.3% 95.9%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
     --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --border: 220 13% 91%;
+    --input: 220 13% 91%;
+
+    --primary-50: 240 100% 98%;
+    --primary-100: 243 91% 95%;
+    --primary-200: 243 100% 92%;
+    --primary-300: 244 97% 85%;
+    --primary-400: 247 95% 76%;
+    --primary-500: 250 92% 70%;
+    --primary-600: 254 86% 58%;
+    --primary-700: 255 72% 50%;
+    --primary-800: 255 71% 42%;
+    --primary-900: 255 70% 35%;
+    --primary-950: 255 70% 35%;
+    --primary: 250 92% 70%;
+    --primary-foreground: 240 100% 98%;
+
+    --secondary: 214.3 31.8% 91.4%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --accent: 214.3 31.8% 91.4%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 346.8 77.2% 49.8%;
-    --radius: 0.3rem;
+    --destructive-foreground: 0 85.7% 97.3;
+
+    --ring: 262.1 83.3% 57.8%;
+
+    --success: 142.1 70.6% 45.3%;
+    --success-foreground: 138.5 76.5% 96.7%;
+
+    --warning: 24.6 95% 53.1%;
+    --warning-foreground: 33.3 100% 96.5%;
+
+    --info: 188.7 94.5% 42.7%;
+    --info-foreground: 183.2 100% 96.3%;
+
+    --border: 214.3 31.8% 91.4%;
+
+    --default-50: 210 40% 98%;
+    --default-100: 210 40% 96.1%;
+    --default-200: 214.3 31.8% 91.4%;
+    --default-300: 212.7 26.8% 83.9%;
+    --default-400: 215 20.2% 65.1%;
+    --default-500: 215.4 16.3% 46.9%;
+    --default-600: 215.3 19.3% 34.5%;
+    --default-700: 215.3 25% 26.7%;
+    --default-800: 217.2 32.6% 17.5%;
+    --default-900: 222.2 47.4% 11.2%;
+    --default-950: 222.2 84% 4.9%;
+    --input: 214.3 31.8% 91.4%;
+
+    --radius: 0.5rem;
+
+    --nextra-primary-hue: 250deg;
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 0 0% 95%;
-    --card: 24 9.8% 10%;
-    --card-foreground: 0 0% 95%;
-    --popover: 0 0% 9%;
-    --popover-foreground: 0 0% 95%;
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 15%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 346.8 77.2% 49.8%;
+    --background: 222.2 47.4% 11.2%;
+    --foreground: 210 40% 98%;
+
+    --muted: 215 27.9% 16.9%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+
+    --popover: 222.2 47.4% 11.2%;
+    --popover-foreground: 210 40% 98%;
+
+    --card: 215 27.9% 16.9%;
+    --card-foreground: 210 40% 98%;
+
+    --border: 215.3 25% 26.7%;
+    --input: 215 27.9% 16.9%;
+
+    --primary: 254 86% 58%;
+
+    --secondary: 215.3 25% 26.7%;
+    --secondary-foreground: 210 40% 98%;
+
+    --accent: 215 27.9% 16.9%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 85.7% 97.3;
+
+    --ring: 263.4 70% 50.4%;
+
+    --success: 142.1 70.6% 45.3%;
+    --success-foreground: 138.5 76.5% 96.7%;
+
+    --info: 188.7 94.5% 42.7%;
+    --info-foreground: 183.2 100% 96.3%;
+
+    --warning: 24.6 95% 53.1%;
+    --warning-foreground: 33.3 100% 96.5%;
+
+    --border: 215.3 25% 26.7%;
+    --input: 217.2 32.6% 17.5%;
+
+    --default-950: 210 40% 98%;
+    --default-900: 210 40% 96.1%;
+    --default-800: 214.3 31.8% 91.4%;
+    --default-700: 212.7 26.8% 83.9%;
+    --default-600: 215 20.2% 65.1%;
+    --default-500: 215.4 16.3% 46.9%;
+    --default-300: 215.3 19.3% 34.5%;
+    --default-200: 215.3 25% 26.7%;
+    --default-100: 217.2 32.6% 17.5%;
+    --default-50: 222.2 47.4% 11.2%;
+  }
+
+}
+
+  * {
+    @apply border-border;
+  }
+
+  html {
+    @apply scroll-smooth;
+  }
+
+  body {
+    @apply bg-[#EEF1F9] dark:bg-background text-foreground text-sm;
+  }
+
+  .avatarGroup {
+    > span {
+      @apply hover:-translate-y-1 hover:relative hover:z-10 transition-transform;
+    }
+  }
+
+
+@layer components {
+}
+
+.has-sticky-header {
+  &::after {
+    position: absolute;
+    z-index: -10;
+    --tw-backdrop-blur: blur(12px);
+    backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness)
+      var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale)
+      var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
+      var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
+      var(--tw-backdrop-sepia);
+    --tw-content: "";
+    content: var(--tw-content);
+    background: linear-gradient(
+      180deg,
+      rgba(var(--v-theme-background), 70%) 44%,
+      rgba(var(--v-theme-background), 43%) 73%,
+      rgba(var(--v-theme-background), 0%)
+    );
+    background-repeat: repeat;
+    block-size: 5.5rem;
+    inset-block-start: -1.5rem;
+    inset-inline-end: 0;
+    inset-inline-start: 0;
+    -webkit-mask: linear-gradient(black, black 18%, transparent 100%);
+    mask: linear-gradient(black, black 18%, transparent 100%);
   }
 }
 
+.CollapsibleContent {
+  overflow: hidden;
+}
 
-  @layer base {
-    * {
-      @apply border-border;
-    }
-    body {
-      @apply bg-background text-foreground;
-    }
+.CollapsibleContent[data-state="open"] {
+  animation: slideDown 300ms ease-out;
+}
+
+.CollapsibleContent[data-state="closed"] {
+  animation: slideUp 300ms ease-out;
+}
+
+.input-group :not(:first-child) input {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.input-group.merged :not(:first-child) input {
+  border-left-width: 0 !important;
+  padding-left: 0px !important;
+}
+
+.input-group :not(:last-child) input {
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.input-group.merged :not(:last-child) input {
+  border-right: 0px !important;
+  padding-right: 0px !important;
+}
+
+
+
+.ck {
+  .ck-editor__editable {
+    min-height: 245px !important;
+  }
+}
+
+.loginwrapper {
+  min-height: calc(var(--vh, 1vh) * 100);
+  flex-basis: 100%;
+}
+
+.loginwrapper .lg-inner-column {
+  height: calc(var(--vh, 1vh) * 100);
+}
+
+@keyframes slideDown {
+  from {
+    height: 0;
   }
 
-
-   /* Panel */
-   .panel {
-    @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
-}
-/* Navbar */
-.navbar-sticky header,
-.navbar-floating header {
-    @apply sticky top-0 z-20;
+  to {
+    height: var(--radix-collapsible-content-height);
+  }
 }
 
-.horizontal .navbar-floating header > div > div:first-child {
-    @apply rounded-b-none;
-}
-.horizontal  header .horizontal-menu {
-    @apply rounded-b-md;
-}
+@keyframes slideUp {
+  from {
+    height: var(--radix-collapsible-content-height);
+  }
 
-/* Sidebar */
-.sidebar:hover .nav-item > a {
-    @apply w-auto;
+  to {
+    height: 0;
+  }
 }
 
-.sidebar .nav-item > button,
-.sidebar .nav-item > a {
-    @apply mb-1 flex w-full items-center justify-between overflow-hidden whitespace-nowrap rounded-md p-2.5 text-[#506690] hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-dark;
-}
-.sidebar .nav-item > button.active,
-.sidebar .nav-item > a.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-dark;
-}
+@keyframes progress-bar-stripes {
+  0% {
+    background-position: 1rem 0;
+  }
 
-.sidebar .nav-item > button.active > div > span,
-.sidebar .nav-item > a.active > div > span {
-    @apply dark:!text-white-dark;
+  to {
+    background-position: 0 0;
+  }
 }
 
-.sidebar ul.sub-menu li button,
-.sidebar ul.sub-menu li a {
-    @apply flex w-full items-center px-9 py-2.5 before:h-0.5 before:w-2 before:rounded before:bg-gray-300 hover:bg-gray-100
-hover:text-primary hover:before:!bg-primary before:mr-2  dark:before:bg-gray-500 dark:hover:bg-gray-900 dark:hover:text-primary;
-}
-.sidebar ul.sub-menu li button.active,
-.sidebar ul.sub-menu li a.active {
-    @apply text-primary before:bg-primary;
+.animate-stripes {
+  animation: progress-bar-stripes 1s linear infinite;
 }
 
-.sidebar .nav-item a div:first-child svg,
-.sidebar .nav-item button div:first-child svg {
-    @apply h-5 w-5 text-black/50 dark:text-white/50;
+.dash-tail-app {
+  .leaflet-control {
+    z-index: 0 !important;
+  }
+
+  .leaflet-container {
+    z-index: 0 !important;
+    position: relative;
+  }
 }
 
-.main-container .main-content {
-    @apply transition-all duration-300 lg:ml-[260px] ;
+.page-min-height {
+  min-height: calc(var(--vh, 1vh) * 100 - 117px);
 }
 
-
-
-.horizontal .nav-item a div:first-child svg,
-.horizontal .nav-item button div:first-child svg {
-    @apply h-5 w-5 text-black/50 dark:text-white/50;
+.page-min-height-semibox {
+  min-height: calc(var(--vh, 1vh) * 100 - 200px);
 }
 
-.horizontal .dark .nav-item a div:first-child svg,
-.dark.horizontal .nav-item a div:first-child svg,
-.horizontal .dark .nav-item button div:first-child svg,
-.dark.horizontal .nav-item button div:first-child svg {
-    @apply text-white/50;
+.page-min-height-horizontal {
+  min-height: calc(var(--vh, 1vh) * 100 - 170px);
 }
 
-.horizontal-menu .nav-link {
-    @apply flex items-center rounded-lg px-2 py-2.5 hover:bg-[#000]/[0.08] hover:text-black dark:hover:bg-[#181f32] dark:hover:text-white-dark xl:px-4;
+.app-height {
+  height: calc(var(--vh, 1vh) * 100 - 11.1rem) !important;
 }
 
-.horizontal-menu .nav-link.active {
-    @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-dark;
+@media (max-width: 768px) {
+  .app-height {
+    height: calc(var(--vh, 1vh) * 100 - 10.5rem) !important;
+  }
 }
 
-.horizontal-menu ul.sub-menu {
-    @apply absolute top-full z-[10] hidden min-w-[180px] rounded bg-white p-0 py-2 text-dark shadow dark:bg-[#1b2e4b] dark:text-white-dark;
+@media (min-width: 1280px) {
+  .semibox-content-wrapper {
+    margin-left: 56px;
+    margin-right: 56px;
+  }
+}
+.layout-padding {
+  padding-bottom: 112px;
+}
+@media (min-width: 768px) {
+  .layout-padding {
+    padding-bottom: 37px;
+  }
+}
+.no-scrollbar::-webkit-scrollbar {
+  width: 0px;
 }
 
-.horizontal-menu ul.sub-menu a,
-.horizontal-menu ul.sub-menu button {
-    @apply flex w-full items-center justify-between px-4 py-2 hover:bg-gray-100 hover:text-primary dark:hover:bg-primary/10;
-}
-
-.horizontal-menu ul.sub-menu a.active,
-.horizontal-menu ul.sub-menu button.active {
-    @apply bg-gray-100 text-primary dark:bg-primary/10;
-}
-
-.horizontal-menu > li.nav-item:hover > ul.sub-menu,
-.horizontal-menu > li.nav-item > ul.sub-menu > li:hover > ul {
-    @apply block;
-}
-
-/* Horizontal layouts */
-.horizontal .horizontal-menu {
-    @apply hidden  lg:flex;
-}
-.horizontal .main-container .main-content {
-    @apply ml-0 
-}
-
-
-.form-select,
-    .form-multiselect {
-        @apply w-full rounded-md border border-white-light bg-white px-4 py-2 text-sm font-semibold text-black !outline-none focus:border-primary focus:ring-transparent dark:border-[#17263c] dark:bg-[#121e32] dark:text-white-dark dark:focus:border-primary;
-    }
-
-
-.form-select>option{
-    @apply text-primary py-1 dark:text-white-dark ;
-}
-
- /* tables */
- .table-responsive {
-    @apply overflow-auto;
-}
-
- .panel {
-    @apply relative rounded-md bg-white p-5 shadow dark:bg-black;
+.no-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
